src-tauri/error.txt
    Checking gvp-quick v0.1.0 (A:\Tools n Programs\GVP-Desktop\src-tauri)
error[E0277]: the trait bound `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., i32, ..., ..., ..., ..., ...): FromRow<'r, _>` is not satisfied
   --> src\main.rs:364:39
    |
364 | ..._, (String, Option<String>, String, Option<String>, Option<String>, Option<String>, Option<String>, Option<String>, Option<String>, Option<String>, Option<String>, i32, Option<i64>, Option<String>, Option<String>, Option<String>, Option<String>)>(
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
    = help: the trait `for<'r> FromRow<'r, _>` is not implemented for `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., i32, ..., ..., ..., ..., ...)`
    = help: the following other types implement trait `FromRow<'r, R>`:
              ()
              (T1, T2)
              (T1, T2, T3)
              (T1, T2, T3, T4)
              (T1, T2, T3, T4, T5)
              (T1, T2, T3, T4, T5, T6)
              (T1, T2, T3, T4, T5, T6, T7)
              (T1, T2, T3, T4, T5, T6, T7, T8)
            and 9 others
note: required by a bound in `sqlx::query_as`
   --> C:\Users\Greepo\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.8.6\src\query_as.rs:345:8
    |
342 | pub fn query_as<'q, DB, O>(sql: &'q str) -> QueryAs<'q, DB, O, <DB as Database>::Arguments<'q>>
    |        -------- required by a bound in this function
...
345 |     O: for<'r> FromRow<'r, DB::Row>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `query_as`
    = note: the full name for the type has been written to 'A:\Tools n Programs\GVP-Desktop\src-tauri\target\debug\deps\gvp_quick-100e8fbca47bef10.long-type-7550605225865915226.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0599]: the method `fetch_all` exists for struct `QueryAs<'_, _, ..., _>`, but its trait bounds were not satisfied
   --> src\main.rs:366:25
    |
364 |   ...   let hmr = sqlx::query_as::<_, (String, Option<String>, String, Option<String>, Option<String>, Option<String>, Option<Strin...
    |  _________________-
365 | | ...       "SELECT moderated_id, account_id, image_id, original_post_id, image_url, thumbnail_url, webapp_url, generation_type, ti...
366 | | ...   ).bind(root_id).fetch_all(&pool).await.unwrap_or_default();
    | |                      -^^^^^^^^^ method cannot be called on `QueryAs<'_, _, ..., _>` due to unsatisfied trait bounds
    | |______________________|
    |
    |
    = note: the following trait bounds were not satisfied:
            `(std::string::String, Option<std::string::String>, std::string::String, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, i32, Option<i64>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>, Option<std::string::String>): FromRow<'r, _>`
    = note: the full name for the type has been written to 'A:\Tools n Programs\GVP-Desktop\src-tauri\target\debug\deps\gvp_quick-100e8fbca47bef10.long-type-492485778798339871.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
   --> src\main.rs:364:19
    |
364 |   ...   let hmr = sqlx::query_as::<_, (String, Option<String>, String, Option<String>, Option<String>, Option<String>, Option<Strin...
    |  _________________^
365 | | ...       "SELECT moderated_id, account_id, image_id, original_post_id, image_url, thumbnail_url, webapp_url, generation_type, ti...
366 | | ...   ).bind(root_id).fetch_all(&pool).await.unwrap_or_default();
    | |____________________________________________^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `gvp-quick` (bin "gvp-quick") due to 3 previous errors
